--- a/frontend/src/components/layout/BottomNav.css
+++ b/frontend/src/components/layout/BottomNav.css
@@ -40,7 +40,7 @@
 }
 
 .nav-item.active {
-  color: var(--neo-white);
+  color: var(--neo-black);
   background: var(--neo-primary);
   font-weight: var(--neo-font-black);
 }
