--- a/frontend/src/components/cafe/CafeList.css
+++ b/frontend/src/components/cafe/CafeList.css
@@ -2,7 +2,7 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  background: var(--gray-50);
+  background: var(--neo-white);
 }
 
 .list-header {
